Tweaked Quick Link Alt Texts
Little edits to the alt text for the Quick Link preview images.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Forza">
 				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Forza-Preview.jpg" alt="A preview image for Forza Motorsport, bearing the name, logo, and cover art of the game. The cover art depicts two cars (a yellow Cadillac V-Series.R hypercar and a blue Chevrolet Corvette E-Ray) speeding towards the camera and to the right along a track with red and white curbing and an open blue sky behind." />
+					<img id="img-quicklink-prev" src="images/Forza-Preview.jpg" alt="A preview image for Forza Motorsport, bearing the name, logo, and cover art of the game. The cover art depicts two cars, a yellow Cadillac V-Series.R hypercar and a blue Chevrolet Corvette E-Ray, speeding towards the camera along a red and white curbed track with an open blue sky behind." />
 					<p class="quick-link-text">Forza Motorsport</p>
 				</div>
 				</a>
@@ -80,7 +80,7 @@
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Thesis">
 				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Thesis-Preview.jpg" alt="A preview image for my Thesis, showing the two playable characters from the Unity FPS Sample, a slender human in an orange and white spacesuit and a taller brown and black imposing robot with a massive gun arm. Both stand in a rocky alien desert." />
+					<img id="img-quicklink-prev" src="images/Thesis-Preview.jpg" alt="A preview image for my Thesis, showing the two playable characters from the Unity FPS Sample. A slender human in an orange and white spacesuit and a taller, imposing, brown and black robot with a massive gun arm stand in a rocky alien desert." />
 					<p class="quick-link-text">Thesis</p>
 				</div>
 				</a>
@@ -88,7 +88,7 @@
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Roboxing">
 				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Roboxing-Preview.jpg" alt="A preview image for Roboxing, showing one of the titular robot boxer characters. They float beneath a light in a dimly lit gym, their red and white triangular body giving the appearance of a wrestling singlet. Their red boxing gloves float in front in the ready position, and their lumpy round head floats above the body with two oval eyes neutrally blinking back at the viewer." />
+					<img id="img-quicklink-prev" src="images/Roboxing-Preview.jpg" alt="A preview image for Roboxing, depicting one of the titular robot boxer characters hovering beneath a light in a dimly lit gym, their red and white triangular body giving the appearance of a wrestling singlet. Their red boxing gloves float in front in the ready position, and their lumpy round head floats above the body with two oval eyes neutrally blinking back at the viewer." />
 					<p class="quick-link-text">Roboxing</p>
 				</div>
 				</a>
@@ -96,7 +96,7 @@
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/more#ReaperScripts">
 				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Reaper-Preview.jpg" alt="A preview image for my Reaper Scripts, bearing the Reaper Digital Audio Workstation logo. On a black background, a round, guitar pick shaped form is created from overlapping green, brown, and blue circles. The shape of a white scythe forms in the negative space and stands out in front of the blob." />
+					<img id="img-quicklink-prev" src="images/Reaper-Preview.jpg" alt="A preview image for my Reaper Scripts, bearing the Reaper Digital Audio Workstation logo. On a black background, a round, guitar pick shaped form is created from overlapping green, brown, and blue circles. The shape of a bright white scythe forms in the negative space." />
 					<p class="quick-link-text">Reaper Scripts</p>
 				</div>
 				</a>
