--- a/more/index.html
+++ b/more/index.html
@@ -110,12 +110,12 @@
 <!--Session Music bot-->
 	<div id="SessionBot">
 	<hr class="main_hr">
-	<h2 class="project-title">Session Music Bot (working title)</h2>
+	<h2 class="project-title">Troubadour Tabletop Audio</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">Discord bot for playing adaptive audio.<br><br>I grew tired of the rudimentary audio tools provided by Roll20 and others, so I wrote a bot to play back FMOD Studio events on command.</p>
-				<p>It is still deeply WIP, and the first "full" release has yet to come, but please give it a go!</p>
-				<a class="download-button-link" target="_self" href="https://github.com/Snoopy20111/Session-Music-Bot-FMODStudio">See the GitHub Repo</a>
+				<p class="remove-top-margin-text">Discord bot for playing adaptive audio.<br><br>I grew tired of the rudimentary audio tools provided by Roll20 and others, so I wrote a bot to stream FMOD Studio audio through a Discord bot, using the <a class="decorated-links" target="_self" href="https://dpp.dev/">D++ library.</a></p>
+				<p>The bot is still WIP, and the first "full" release has yet to come. but please give it a go!</p>
+				<a class="download-button-link" target="_self" href="https://github.com/Snoopy20111/Troubadour-Tabletop-Audio">See the GitHub Repo</a>
 			</div>
 		</div>
 	</div>
