--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 			<a class="header-button-link" target="_blank" href="resume.pdf">Resume</a>
 		</div>
 		<div class="header-sidekick-links">
-			<a class="undecorated-links" target="_self" href="https://twitter.com/Snoopy_20111">
-				<img id="img-twitter-header" src="images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter profile." />
+			<a class="undecorated-links" target="_self" href="https://bsky.app/profile/snoopy20111.bsky.social">
+				<img id="img-bsky-header" src="images/icon_bluesky.svg" alt="Bluesky Logo and link to Logan's Bluesky profile." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.linkedin.com/in/lhardin-sound/">
 				<img id="img-linkedin-header" src="images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
@@ -163,8 +163,8 @@
 <!--Footer, similar links as header-->
 	<footer class="footer-main">
 		<div class="footer-links">
-			<a class="undecorated-links" target="_self" href="https://twitter.com/Snoopy_20111">
-				<img id="img-twitter-footer" src="images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter profile." />
+			<a class="undecorated-links" target="_self" href="https://bsky.app/profile/snoopy20111.bsky.social">
+				<img id="img-bsky-footer" src="images/icon_bluesky.svg" alt="Bluesky Logo and link to Logan's Bluesky profile." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.linkedin.com/in/lhardin-sound/">
 				<img id="img-linkedin-footer" src="images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
