Updated FavGames & Horizon content
Also added links to Forza Motorsport on the Xbox store and Steam, and did a little formatting for buttons on tablet layout.

--- a/games/index.html
+++ b/games/index.html
@@ -53,12 +53,15 @@
 		<div class="project-div">
 			<h3 class="project-subtitle-text">Magnit | Technical Sound Designer</h3>
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">Work Hard, Play Hard.<br><br>I joined the Meta Creative Audio team in 2024 to help prototype, write scripts, improve tools, and empower my fellow sound designers working on Horizon. Much of my work involves writing in TypeScript and C#, as well as using Unity, Facebook Audio360, and a handful of less public in-house tools.</p>
-				<p>Excited to share more later!</p>
+				<p class="remove-top-margin-text">Work Hard, Play Hard.<br><br>I joined the Meta Creative Audio team in 2024 to help implement audio, improve tools, and empower my fellow sound designers working on Horizon. Much of my work involves TypeScript, JavaScript, and C#, as well as using Unity and a handful of in-house tools.</p>
+				<p>I was a crucial part of Horizon's transition from Facebook Audio360 to FMOD Studio, helping shape workflows and best practices to achieve the most functionality we could while also doubling audio performance.</p>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Sd7du11ZPZo" title="Youtube video, Meta Horizon Worlds Horizon Season trailer." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<a class="download-button-link" target="_self" href="https://horizon.meta.com/">Play now on the Quest store, browser, or mobile</a>
+				<p>Some worlds and events I've supported include
+				<a class="decorated-links" target="_self" href="https://www.meta.com/blog/quest/connect-2024-horizon-worlds-behind-the-scenes/">Meta Connect 2024</a> and
+				<a class="decorated-links" target="_self" href="https://horizon.meta.com/world/10161451989024108/?hwsh=H0bccjMPU5">Horizon Central.</a></p>
+				<a class="download-button-link" target="_self" href="https://horizon.meta.com/">Play on Quest, browser, or mobile</a>
 			</div>
 		</div>
 	</div>
@@ -74,6 +77,9 @@
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/em4gv1Ietko" title="YouTube video, Forza Motorsport 2023 Trailer, without Audio Description. A Described version of this trailer is available on YouTube." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<br>
+				<a class="download-button-link" target="_self" href="https://www.xbox.com/en-us/games/store/forza-motorsport-standard-edition/9plkvswr299f">Download on Xbox</a>
+				<a class="download-button-link" target="_self" href="https://store.steampowered.com/app/2440510/Forza_Motorsport/">Download on Steam</a>
 			</div>
 		</div>
 		<div class="project-div-singlecolumn" id="Forza-Awards">
@@ -138,6 +144,7 @@
 			</div>
 			<div class="project-content-right">
 				<img id="img-obj-in-mirror" src="../images/ObjectsInMirror.jpg" alt="Screenshot from the game. An orange pickup truck's headlights scatter light across a paved two-lane road through the rain and darkness." />
+				<br>
 				<a class="download-button-link" target="_self" href="https://github.com/Snoopy20111/ObjectsInMirror">See the GitHub Project</a>
 				<a class="download-button-link" target="_self" href="https://snoopy20111.itch.io/objects-in-mirror">Download on Itch.io</a>
 			</div>
