--- a/index.html
+++ b/index.html
@@ -128,24 +128,24 @@
 		<div class="content-bio-favgames-column-1">
 			<h3 class="favorites-headers">Favorite games lately:</h3>
 			<ul class="ul-favorites-list">
-				<li>Lethal Company</li>
-				<li>TES III: Morrowind</li>
-				<li>Balatro</li>
+				<li>Caravan Sandwitch</li>
 				<li>Forza Motorsport</li>
-				<li>Duck Game</li>
-				<li>Mysterium</li>
+				<li>Lethal Company</li>
+				<li>Fortnite</li>
+				<li>Thunder Road</li>
 			</ul>
 		</div>
 		<div class="content-bio-favgames-column-2">
 			<h3 class="favorites-headers">Anticipated games:</h3>
 			<ul class="ul-favorites-list">
-				<li>Gears of War: E-Day</li>
 				<li>South of Midnight</li>
-				<li>Golden Lap</li>
+				<li>Ghost of Yōtei</li>
+				<li>Gears of War: E-Day</li>
 				<li>Civilization VII</li>
 				<li>Marathon</li>
+				<li>Dwarf Fortress Adventure Mode</li>
 			</ul>
-			<!--<p class="small-text">I don't anticipate many games because I'm behind the curve as it is. So many good ones already out, so many I just don't know about yet!</p> -->
+			<!--<p class="small-text">I don't anticipate many games because I'm behind the curve as it is. So many good ones already out, so many I just don't know about yet!</p>-->
 		</div>
 		<div class="content-bio-favgames-column-3">
 			<h3 class="favorites-headers">Favorite sounding games:</h3>
