Updated Recent Games
Mostly added those I've played most recently (Balatro, Golden Lap) and removed those I was playing mostly for the reference (Fortnite, though it was fun). Also moved Caravan Sandwitch down the list, since I haven't played it for a while.

--- a/index.html
+++ b/index.html
@@ -127,10 +127,11 @@
 		<div class="content-bio-favgames-column-1">
 			<h3 class="favorites-headers">Favorite games lately:</h3>
 			<ul class="ul-favorites-list">
-				<li>Caravan Sandwitch</li>
+				<li>Balatro</li>
+				<li>Golden Lap</li>
 				<li>Forza Motorsport</li>
+				<li>Caravan Sandwitch</li>
 				<li>Lethal Company</li>
-				<li>Fortnite</li>
 				<li>Thunder Road</li>
 			</ul>
 		</div>
@@ -144,14 +145,13 @@
 				<li>Marathon</li>
 				<li>Dwarf Fortress Adventure Mode</li>
 			</ul>
-			<!--<p class="small-text">I don't anticipate many games because I'm behind the curve as it is. So many good ones already out, so many I just don't know about yet!</p>-->
 		</div>
 		<div class="content-bio-favgames-column-3">
 			<h3 class="favorites-headers">Favorite sounding games:</h3>
 			<ul class="ul-favorites-list">
 				<li>Call of Duty 2</li>
 				<li>Outer Wilds</li>
-				<li>Battlefield (3 and 1943)</li>
+				<li>Battlefield 3</li>
 				<li>Railroad Tycoon 3</li>
 				<li>Galaga</li>
 				<li>Mud and Blood 2</li>
