Added Horizon Venues to Meta page
Just an extra link, but it's an example of my work.

--- a/games/index.html
+++ b/games/index.html
@@ -59,7 +59,8 @@
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Sd7du11ZPZo" title="Youtube video, Meta Horizon Worlds Horizon Season trailer." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<p>Some worlds and events I've supported include
-				<a class="decorated-links" target="_self" href="https://www.meta.com/blog/quest/connect-2024-horizon-worlds-behind-the-scenes/">Meta Connect 2024</a> and
+				<a class="decorated-links" target="_self" href="https://www.meta.com/blog/quest/connect-2024-horizon-worlds-behind-the-scenes/">Meta Connect 2024</a>,
+				<a class="decorated-links" target="_self" href="https://horizon.meta.com/world/10104211281051297/">Horizon Venues</a>, and
 				<a class="decorated-links" target="_self" href="https://horizon.meta.com/world/10161451989024108/?hwsh=H0bccjMPU5">Horizon Central.</a></p>
 				<a class="download-button-link" target="_self" href="https://horizon.meta.com/">Play on Quest, browser, or mobile</a>
 			</div>
