Troubadour Page Update 01
Small, unfinished update to the Troubadour page in the More section. Some formatting is wrong and the icon should ideally be replaced with a video, but we're just pushing this out now.

--- a/more/index.html
+++ b/more/index.html
@@ -107,17 +107,38 @@
 			</details>
 		</div>
 	</div>
-<!--Session Music bot-->
-	<div id="SessionBot">
+<!--Troubadour Tabletop Audio-->
+	<div id="Troubadour">
 	<hr class="main_hr">
 	<h2 class="project-title">Troubadour Tabletop Audio</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">Discord bot for playing adaptive audio.<br><br>I grew tired of the rudimentary audio tools provided by Roll20 and others, so I wrote a bot to stream FMOD Studio audio through a Discord bot, using the <a class="decorated-links" target="_self" href="https://dpp.dev/">D++ library.</a></p>
-				<p>The bot is still WIP, and the first "full" release has yet to come. but please give it a go!</p>
-				<a class="download-button-link" target="_self" href="https://github.com/Snoopy20111/Troubadour-Tabletop-Audio">See the GitHub Repo</a>
+				<p class="remove-top-margin-text">Discord bot for playing adaptive audio.<br><br>I grew tired of the rudimentary audio tools provided by Roll20 and others, so I wrote a bot to run an instance of <a class="decorated-links" target="_self" href="https://www.fmod.com/">FMOD Studio</a> and stream the output a Discord bot, using the <a class="decorated-links" target="_self" href="https://dpp.dev/">D++ library.</a></p>
+			</div>
+			<div class="project-content-right">
+				<img id="img-troubadour-logo" src="../images/Troubadour.svg" alt="Logo for Troubadour."/>
+				<p>
+					<a class="download-button-link" target="_self" href="https://github.com/Snoopy20111/Troubadour-Tabletop-Audio/releases/">Download Here</a>
+					<a class="download-button-link" target="_self" href="https://github.com/Snoopy20111/Troubadour-Tabletop-Audio">See the Github Repo</a>
+				</p>
 			</div>
 		</div>
+		<div class="project-div-singlecolumn" id="Troubadour-Features">
+			<h4>Features:</h4>
+		</div>
+		<ul class="project-div">
+			<li><b>Slash commands</b> to interact with most major features of FMOD Studio: Dynamic Mixing, Event Playback logic, Global and Local Parameters, Real-time DSP, etc.</li>
+			<br>
+			<li><b>Playback of any loose files FMOD supports.</b> That includes almost anything you can think of, from .wav and .mp3 to .midi and .mod. <a class="decorated-links" target="_self" href="https://www.fmod.com/docs/2.03/api/core-api-sound.html#fmod_sound_type">See here for a full list.</a></li>
+			<br>
+			<li><b>Auto-Complete support</b> to easily find and play the events and files you want, as quickly as possible.</li>
+			<br>
+			<li><b>List and Help commands</b> to show users everything they need to know from within Discord: what they can play, what's already playing, and what parameters they can adjust.</li>
+			<br>
+			<li><b>User Management commands</b> to allow multiple users simultaneous control.</li>
+			<br>
+			<li><b>A library of pre-made events,</b> to use immediately in your campaigns or as examples for building your own. Included are 23 Creative Commons pieces of music, 5 Ambiences, and 4 "Scenes," as well as two example files for playing loose files.</li>
+		</ul>
 	</div>
 <!--Solar Science-->
 	<div id="SolarScience">
@@ -131,7 +152,7 @@
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/3WlT3HZsg2U" title="YouTube video, review for Solar Science mod" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<br>
-				<a class="download-button-link download-button-spacer" target="_self" href="https://spacedock.info/mod/811/Solar%20Science">Download the mod</a>
+				<p><a class="download-button-link download-button-spacer" target="_self" href="https://spacedock.info/mod/811/Solar%20Science">Download the mod</a></p>
 			</div>
 		</div>
 	</div>
