Quick Links: Thesis -> Troubadour
Added a new Quick Link for Troubadour instead of my Thesis, reflecting a change in what I'd like to emphasize.

--- a/index.html
+++ b/index.html
@@ -77,11 +77,19 @@
 				</div>
 				</a>
 			</div>
-			<div class="content-quick-link-separator">
+			<!-- <div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Thesis">
 				<div class="content-quick-link-box">
 					<img id="img-quicklink-prev" src="images/Thesis-Preview.jpg" alt="A preview image for my Thesis, showing the two playable characters from the Unity FPS Sample. A slender human in an orange and white spacesuit and a taller, imposing, brown and black robot with a massive gun arm stand in a rocky alien desert." />
 					<p class="quick-link-text">Thesis</p>
+				</div>
+				</a>
+			</div> -->
+			<div class="content-quick-link-separator">
+				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/more#Troubadour">
+				<div class="content-quick-link-box">
+					<img id="img-quicklink-prev" src="images/Troubadour-Preview.jpg" alt="Preview image for Troubadour, showing the program's logo of an orange medeival trumpet and a banner with a creature." />
+					<p class="quick-link-text">Troubadour</p>
 				</div>
 				</a>
 			</div>
