Updated Anticipated Games

--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
 		<div class="content-bio-favgames-column-1">
 			<h3 class="favorites-headers">Favorite games lately:</h3>
 			<ul class="ul-favorites-list">
+				<li>Puck</li>
+				<li>World of Warcraft (Classic)</li>
 				<li>Balatro</li>
-				<li>Golden Lap</li>
 				<li>Forza Motorsport</li>
 				<li>Caravan Sandwitch</li>
 				<li>Lethal Company</li>
-				<li>Thunder Road</li>
 			</ul>
 		</div>
 		<div class="content-bio-favgames-column-2">
@@ -149,9 +149,9 @@
 				<li>South of Midnight</li>
 				<li>Ghost of Yōtei</li>
 				<li>Gears of War: E-Day</li>
-				<li>Civilization VII</li>
 				<li>Marathon</li>
-				<li>Dwarf Fortress Adventure Mode</li>
+				<li>Grand Theft Auto 6</li>
+				<li>Splitgate 2</li>
 			</ul>
 		</div>
 		<div class="content-bio-favgames-column-3">
