Replaced Halo Redesign with Puck
It's not much, and I need to keep working on this redesign to make it more impressive, but this is certainly better than the Halo 5 Trailer (I'd hope)

--- a/more/index.html
+++ b/more/index.html
@@ -162,12 +162,12 @@
 		<h2 class="project-title">Sound Redesigns</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<h3 class="subproject-title" id="Redesign-Halo3ODST">Halo 3: ODST</h3>
+				<h3 class="subproject-title-block" id="Redesign-Halo3ODST">Halo 3: ODST</h3>
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/HdBcm-ChUrU" title="YouTube video, Sound Redesign for Halo 3: ODST" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 			<div class="project-content-right">
-				<h3 class="subproject-title" id="Redesign-Halo5Trailer">Halo 5 Trailer (Rescore)</h3>
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/UsHMSY8uVgQ?si=ljpiKKhqUZm3-F2h" title="YouTube video, Music Rescore for Halo 5 Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<h3 class="subproject-title-block" id="Redesign-PuckUI">Puck (UI) [Placeholder]</h3>
+				<iframe class="project-video-embed-block" src="https://www.youtube.com/embed/SplKdrc9iOg" title="YouTube video, Sound Redesign for Halo 3: ODST" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 		</div>
 	</div>
