Fix for weird column wrap on Chrome
Google Chrome seems to have a different idea of when an item should wrap to the previous column than Firefox does based on the content in those columns; this change is mostly text updates, and as a result also includes a few grammar and spelling fixes.

Only remaining spot that wraps weirdly is the section on Troubadour, where the logo wraps, but I'd like to replace that eventually with a video.

--- a/games/index.html
+++ b/games/index.html
@@ -53,7 +53,7 @@
 		<div class="project-div">
 			<h3 class="project-subtitle-text">Magnit | Technical Sound Designer</h3>
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">Work Hard, Play Hard.<br><br>I joined the Meta Creative Audio team in 2024 to help implement audio, improve tools, and empower my fellow sound designers working on Horizon. Much of my work involves TypeScript, JavaScript, and C#, as well as using Unity and a handful of in-house tools.</p>
+				<p class="remove-top-margin-text">Work Hard, Play Hard.<br><br>I joined the Meta Creative Audio team in 2024 to help implement audio and improve tools empowering my fellow sound designers working on Horizon and bringing ideas to life myself. Much of my work involves TypeScript, JavaScript, C#, Unity, source control solutions like Mercurial and Perforce, and a colorful variety of in-house tools.</p>
 				<p>I was a crucial part of Horizon's transition from Facebook Audio360 to FMOD Studio, helping shape workflows and best practices to achieve the most functionality we could while also doubling audio performance.</p>
 			</div>
 			<div class="project-content-right">
@@ -61,8 +61,11 @@
 				<p>Some worlds and events I've supported include
 				<a class="decorated-links" target="_self" href="https://www.meta.com/blog/quest/connect-2024-horizon-worlds-behind-the-scenes/">Meta Connect 2024</a>,
 				<a class="decorated-links" target="_self" href="https://horizon.meta.com/world/10104211281051297/">Horizon Venues</a>, and
-				<a class="decorated-links" target="_self" href="https://horizon.meta.com/world/10161451989024108/?hwsh=H0bccjMPU5">Horizon Central.</a></p>
-				<a class="download-button-link" target="_self" href="https://horizon.meta.com/">Play on Quest, browser, or mobile</a>
+				<a class="decorated-links" target="_self" href="https://horizon.meta.com/world/10161451989024108/?hwsh=H0bccjMPU5">Horizon Central</a>, available on a variety of platforms.</p>
+				<a class="download-button-link" target="_self" href="https://www.meta.com/experiences/meta-horizon-worlds/2532035600194083/">Play on Quest</a>
+				<a class="download-button-link" target="_self" href="https://horizon.meta.com/">Browser</a>
+				<a class="download-button-link" target="_self" href="https://apps.apple.com/us/app/meta-horizon/id1366478176">iOS</a>
+				<a class="download-button-link" target="_self" href="https://play.google.com/store/apps/details?id=com.oculus.twilight">or Android</a>
 			</div>
 		</div>
 	</div>
@@ -73,18 +76,20 @@
 		<div class="project-div">
 			<h3 class="project-subtitle-text">Turn 10 Studios | Sound Designer</h3>
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">See you at the starting line!<br><br>I joined the Turn 10 audio team in 2021, shipping Forza Motorsport 2023 as my first AAA title. I had a hand in almost everything except car engines (examples below).</p>
-				<p class="inline-grid">In so doing, I became familiar with practically every tool in Turn 10's chest, including FMOD Studio, 3DS Max, Perforce, and a plethora of in-house tools.</p>
+				<p class="remove-top-margin-text">See you at the starting line!<br><br>I joined the Turn 10 audio team in 2021, shipping Forza Motorsport 2023 as my first AAA title. I was involved at different points with almost every Audio Food Group in the game, as well as Accessibility (examples below).
+				<br><br>
+				As a result, I became familiar with practically every tool in Turn 10's chest, including FMOD Studio, XML, 3DS Max, Perforce, and a plethora of in-house tools. Additionally, I was given a broad taste of different working patterns, from early Production through Release, into post-Release and Live Services.
+				</p>
 			</div>
 			<div class="project-content-right">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/em4gv1Ietko" title="YouTube video, Forza Motorsport 2023 Trailer, without Audio Description. A Described version of this trailer is available on YouTube." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/em4gv1Ietko" title="YouTube video, Forza Motorsport 2023 Trailer, without Audio Description. A Described version of this trailer is available on YouTube." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="" data-ruffle-polyfilled=""></iframe>
 				<br>
 				<a class="download-button-link" target="_self" href="https://www.xbox.com/en-us/games/store/forza-motorsport-standard-edition/9plkvswr299f">Download on Xbox</a>
 				<a class="download-button-link" target="_self" href="https://store.steampowered.com/app/2440510/Forza_Motorsport/">Download on Steam</a>
 			</div>
 		</div>
 		<div class="project-div-singlecolumn" id="Forza-Awards">
-			<p class="remove-top-margin-text">Since release, we've been proud to receive the following honors:</p>
+			<p class="remove-top-margin-text">Since release, the game has received the following honors, many as a direct result of our Accessibility efforts:</p>
 		</div>
 		<ul class="project-div" id="Forza-Awards-List">
 			<li class="li-forza-awards">The Game Awards (2023):
@@ -140,8 +145,8 @@
 		<div class="project-div">
 			<h3 class="project-subtitle-text">Personal Project | Solo Developer</h3>
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">...may be closer than they appear.<br><br>A top-down horror rally-driving game about escaping the dark country roads and the things that live in them. It formed my entry to the <a class="decorated-links" target="_self" href="https://itch.io/jam/acerola-jam-0">Acerola Jam Zero game jam.</a> I took the opportunity to use Godot 4 and Wwise, using and contributing to Alessandro Famà's <a class="decorated-links" target="_self" href="https://github.com/alessandrofama/wwise-godot-integration">Wwise integration.</a></p>
-				<p>It was both fun to work with Godot and freeing to focus on a small scope.</p>
+				<p class="remove-top-margin-text">...may be closer than they appear.<br><br>A top-down horror rally-driving game about escaping the dark country roads and the things that live in them. It formed my entry to the <a class="decorated-links" target="_self" href="https://itch.io/jam/acerola-jam-0">Acerola Jam Zero game jam</a>, which necessitated building the game entirely myself. I took the opportunity to use Godot 4 and Wwise, using and contributing to Alessandro Famà's <a class="decorated-links" target="_self" href="https://github.com/alessandrofama/wwise-godot-integration">Wwise integration.</a></p>
+				<p>It was both fun to work with Godot and freeing to focus on a small scope, though like many game jam projects, it remains only somewhat finished and <i>deeply</i> unpolished. Play at your peril!</p>
 			</div>
 			<div class="project-content-right">
 				<img id="img-obj-in-mirror" src="../images/ObjectsInMirror.jpg" alt="Screenshot from the game. An orange pickup truck's headlights scatter light across a paved two-lane road through the rain and darkness." />
@@ -242,13 +247,14 @@
 			<div class="project-content-left">
 				<h3 class="subproject-title">FooFarYall</h3>
 				<h4 class="project-subtitle-text">The Good, The Bad, &#38; The Howdy | Audio Person</h4>
-				<p>Crying over spilled milk.<br><br>A silly Western game, made for <a class="decorated-links" href="https://chillennium.com/">Chillennium Game Jam</a> with Unity and played on one keyboard. All music was recorded &#38; edited on-site. For our efforts we won the award for Special Recognition in Sound.</p>
+				<p>Crying over spilled milk.<br><br>A silly 2-player competative Western game, made for <a class="decorated-links" href="https://chillennium.com/">Chillennium Game Jam</a> with Unity and <a class="decorated-links" href="https://fungusgames.com/">Fungus</a>, played on one keyboard.</p>
+				<p>This was when Audio was simply a hobby for me, before I discovered it as a career. All music was recorded &#38; edited on-site in whatever quiet rooms or unholy speaker-out-to-mic-in setups I could manage; for that effort, we won a Special Recognition award for Sound.</p>
 				<iframe title="Bandcamp audio player, Walking Gait from FooFarYall original Soundtrack" style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=2691759572/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
 				<iframe title="Bandcamp audio player, Hot on the Trail from FooFarYall original Soundtrack" style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=382131293/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/C72M7S4osKU?si=jCPjNNMdQOeOqWbV" title="YouTube video, FooFarYall gameplay" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p>This project directly led me to my involvement with <a class="decorated-links" href="https://loganhardin.xyz/games/#TriseumLiveLab">Triseum &#38; the LIVE Lab,</a> and to me pursuing Game Audio as a career. You can find both tracks on my <a class="decorated-links" href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Bandcamp album of miscellaneous tracks,</a> and try the game with a friend below.</p>
+				<p>This directly led me to my involvement with <a class="decorated-links" href="https://loganhardin.xyz/games/#TriseumLiveLab">Triseum &#38; the LIVE Lab,</a> and to my pursuit of Game Audio as a career. You can find both tracks on my <a class="decorated-links" href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Bandcamp album of miscellaneous tracks,</a> and try the (very jank!) game with a friend below.</p>
 				<a class="download-button-link" target="_self" href="https://embyrs.itch.io/foofaryall">Download on Itch.io</a>
 			</div>
 		</div>
