--- a/more/index.html
+++ b/more/index.html
@@ -113,14 +113,12 @@
 	<h2 class="project-title">Troubadour Tabletop Audio</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">Discord bot for playing adaptive audio.<br><br>I grew tired of the rudimentary audio tools provided by Roll20 and others, so I wrote a bot to run an instance of <a class="decorated-links" target="_self" href="https://www.fmod.com/">FMOD Studio</a> and stream the output a Discord bot, using the <a class="decorated-links" target="_self" href="https://dpp.dev/">D++ library.</a></p>
+				<p class="remove-top-margin-text">Discord bot for playing adaptive audio.<br><br>I grew tired of the rudimentary audio tools provided by Roll20 and others, and was eager to work more with C++ and Audio APIs. In response, I wrote a bot to run an instance of <a class="decorated-links" target="_self" href="https://www.fmod.com/">FMOD Studio</a> and stream the output to a Discord Voice Chat, using the <a class="decorated-links" target="_self" href="https://dpp.dev/">D++ library.</a></p>
 			</div>
 			<div class="project-content-right">
 				<img id="img-troubadour-logo" src="../images/Troubadour.svg" alt="Logo for Troubadour."/>
-				<p>
-					<a class="download-button-link" target="_self" href="https://github.com/Snoopy20111/Troubadour-Tabletop-Audio/releases/">Download Here</a>
-					<a class="download-button-link" target="_self" href="https://github.com/Snoopy20111/Troubadour-Tabletop-Audio">See the Github Repo</a>
-				</p>
+				<a class="download-button-link" target="_self" href="https://github.com/Snoopy20111/Troubadour-Tabletop-Audio/releases/">Download Here</a>
+				<a class="download-button-link" target="_self" href="https://github.com/Snoopy20111/Troubadour-Tabletop-Audio">See the Github Repo</a>
 			</div>
 		</div>
 		<div class="project-div-singlecolumn" id="Troubadour-Features">
@@ -146,13 +144,14 @@
 	<h2 class="project-title">Solar Science</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">A Kerbal Space Program Mod. Praise the Sun!<br><br>This was a project I originally undertook as a high-school directed study. I modeled, textured, animated, and wrote Unity C# scripts for two new experiment parts, based upon those aboard NASA's real <a class="decorated-links" target="_self" href="https://soho.nascom.nasa.gov/">SOHO</a> and <a class="decorated-links" target="_self" href="https://stereo.gsfc.nasa.gov/">STEREO</a> missions. Over the years I made small additions, such as experiment requirements, SFX, and real-time images from NASA's feeds.</p>
+				<p class="remove-top-margin-text">A Kerbal Space Program Mod. Praise the Sun!<br><br>This was a project I originally undertook as a high-school directed study. I modeled, textured, animated, and wrote Unity C# scripts for two new experiment parts, based upon those aboard NASA's real <a class="decorated-links" target="_self" href="https://soho.nascom.nasa.gov/">SOHO</a> and <a class="decorated-links" target="_self" href="https://stereo.gsfc.nasa.gov/">STEREO</a> missions. Over the following years I made small additions, such as experiment requirements, sound effects, and real-time images from NASA's feeds.</p>
 				<p>Over my 5 years of ownership, Solar Science garnered around 50k downloads across all platforms. In early 2020 I handed the project off to KSP Forums user zer0Kerbal, who has maintained the mod since.</p>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/3WlT3HZsg2U" title="YouTube video, review for Solar Science mod" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<br>
-				<p><a class="download-button-link download-button-spacer" target="_self" href="https://spacedock.info/mod/811/Solar%20Science">Download the mod</a></p>
+				<a class="download-button-link download-button-spacer" target="_self" href="https://spacedock.info/mod/811/Solar%20Science">Download the mod</a>
+				<a class="download-button-link download-button-spacer" target="_self" href="https://spacedock.info/mod/811/Solar%20Science">See the Github Repo</a>
 			</div>
 		</div>
 	</div>
@@ -207,14 +206,16 @@
 				<ul>
 					<li>Each painting was assigned a key on the circle of 5ths, based on their respective "darkness" of scale/color.</li>
 					<li>Each key had a handful of guitar passages assigned, improvised from the codes of the most common hex colors in that work.</li>
-					<li>The chances of each passage playing corresponded to their color's frequency in the painting, and occassionally the key/painting would change.</li>
-					<li>Each of the paintings were reduced to the most common colors, and when a crummy beat detector found a "beat," it would create or destroy <a class="decorated-links" href="https://en.wikipedia.org/wiki/Voronoi_diagram">voronoi shapes,</a> sampling the colors beneath.</li>
+					<li>The chances of each passage playing corresponded to their color's frequency in the painting, and occasionally the key/painting would change.</li>
+					<li>Each of the paintings were reduced to the most common colors, and when a (terrible) beat detector found a "beat," it would create or destroy <a class="decorated-links" href="https://en.wikipedia.org/wiki/Voronoi_diagram">voronoi shapes,</a> sampling the colors beneath.</li>
 				</ul>
-				<p></p>
 			</div>
 			<iframe class="project-video-embed" src="https://www.youtube.com/embed/UDA2EpzhcHI" title="YouTube video, screen recording of In Living Color running" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			<p>The piece was intended to be projected and left running in a gallery, with the goal to create something new while maintaining a sense of the creative act in the first place: that is, structured and informed improvisation, where the little details are lost to time.</p>
 			<a class="download-button-link" target="_self" href="https://drive.google.com/file/d/1k4-Oh8gM139GGG1JEHBEauaH6G2hxfS7/view">Download the program</a>
+			<a class="download-button-link" target="_self" href="https://processing.org/">Play with Processing</a>
+			
+			
 		</div>
 	</div>
 </div>
